--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
   --prymary-bg-color: #ffffff;
   --primary-color: #757575;
   --primari-logo-color: #000000;
+  --primari-social-color: #afb1b8;
+  --secondary-social-color: #ffffff;
   --secondary-bg-color: #2f303a;
   --commands-bg-color: #f5f4fa;
   --bg-botton: #f5f4fa;
@@ -16,6 +18,8 @@
   --header-bottom-border-color: #ececec;
 }
 body {
+  /* max-width: 1600px; */
+  margin: 0 auto;
   font-family: var(--primary-font);
   font-weight: 400;
   letter-spacing: 0.03em;
@@ -67,6 +71,9 @@ img {
 }
 .menu .menu-link.current {
   color: var(--accent-color);
+}
+.icon {
+  fill: currentColor;
 }
 /* ===================== /COMPONENT ======================= */
 /* =================  M A I N   P A G E =================== */
@@ -126,20 +133,6 @@ img {
 .contact .link:focus {
   color: var(--accent-color);
 }
-.mail-link.link::before {
-  content: "";
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  background-image: url(../images/icon-header/mail-icon.svg);
-}
-.tel-link.link::before {
-  content: "";
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  background-image: url(../images/icon-header/tel-icon.svg);
-}
 .tel-link,
 .mail-link {
   padding: 32px 0;
@@ -150,10 +143,23 @@ img {
   letter-spacing: 0.02em;
   color: inherit;
 }
+.mail-icon,
+.tel-icon {
+  margin-right: 10px;
+}
 /* ====================== /HEADER ====================== */
 /* ======================== HERO ======================= */
 .hero {
   padding: 200px 0;
+  margin: 0 auto;
+  max-width: 1600px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero/background-hero.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: var(--secondary-bg-color);
   text-align: center;
 }
@@ -204,6 +210,16 @@ img {
 }
 .features-item:not(:last-child) {
   margin-right: 30px;
+}
+.container-icon {
+  width: 270px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  background: var(--bg-botton);
+  border-radius: 4px;
 }
 .features-list .list-title {
   margin-bottom: 10px;
@@ -269,11 +285,86 @@ img {
   color: var(--bold-color);
 }
 .commands-position {
+  margin-bottom: 16px;
   text-align: center;
   font-size: 16px;
   line-height: 1.19;
 }
-/* ======================= /COMANDS ====================== */
+.social-list {
+  justify-content: center;
+  align-items: center;
+}
+.social-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+.social-name {
+  position: absolute;
+  white-space: nowrap;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.social-svg {
+  fill: var(--primari-social-color);
+}
+.social-svg:hover,
+.social-svg:focus {
+  fill: var(--secondary-social-color);
+}
+/* ======================== /COMANDS ======================= */
+/* ========================  CLIENTS ======================= */
+.clients-title {
+  margin-bottom: 50px;
+}
+.clients-list {
+  display: flex;
+}
+.clients-item {
+  width: calc((100% - 150px) / 6);
+  display: block;
+  height: 92px;
+  border: 1px solid var(--primari-social-color);
+  border-radius: 4px;
+  border-color: var(--primari-social-color);
+}
+.clients-item:hover,
+.clients-item:focus {
+  fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+.clients-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.clients-svg {
+  fill: var(--primari-social-color);
+}
+.clients-svg:hover,
+.clients-svg:focus {
+  fill: inherit;
+}
+/* ======================== /CLIENTS ======================= */
 /* ======================== BASEMENT ======================= */
 .basement {
   padding: 60px 0;
