--- a/css/styles.css
+++ b/css/styles.css
@@ -460,6 +460,8 @@ img {
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accent-color);
   color: var(--white-color);
 }
@@ -476,6 +478,11 @@ img {
 }
 .cards-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
+}
+.cards-item:hover,
+.cards-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .cards-list-tile {
   margin-bottom: 4px;
