--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ ul {
 img {
   display: block;
 }
+a:focus-visible {
+  outline: none;
+}
 .container {
   width: 1200px;
   margin-left: auto;
@@ -338,13 +341,6 @@ img {
   width: calc((100% - 150px) / 6);
   display: block;
   height: 92px;
-  border: 1px solid var(--primari-social-color);
-  border-radius: 4px;
-  border-color: var(--primari-social-color);
-}
-.clients-item:hover,
-.clients-item:focus {
-  border: 1px solid var(--accent-color);
 }
 .clients-item:not(:last-child) {
   margin-right: 30px;
@@ -353,15 +349,19 @@ img {
   width: 100%;
   height: 100%;
   display: flex;
+  border: 1px solid var(--primari-social-color);
+  border-radius: 4px;
   justify-content: center;
   align-items: center;
+  color: var(--primari-social-color);
+}
+.clients-link:hover,
+.clients-link:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
 }
 .clients-svg {
-  fill: var(--primari-social-color);
-}
-.clients-item:hover .clients-svg,
-.clients-item:focus .clients-svg {
-  fill: var(--accent-color);
+  fill: currentColor;
 }
 /* ======================== /CLIENTS ======================= */
 /* ======================== BASEMENT ======================= */
