--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,8 @@ ul {
 img {
   display: block;
 }
-a:focus-visible {
+a,
+button:focus-visible {
   outline: none;
 }
 .container {
@@ -294,16 +295,18 @@ a:focus-visible {
   line-height: 1.19;
 }
 .social-list {
+  gap: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.social-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+/* .social-item:not(:last-child) {
+  margin-right: 10px;
+} */
 .social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -371,6 +374,7 @@ a:focus-visible {
 }
 .container-basement {
   display: flex;
+  align-items: baseline;
 }
 .basement .dark-theme {
   color: var(--white-color);
@@ -411,9 +415,6 @@ a:focus-visible {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--white-color);
-}
-.social-ft-item:not(:last-child) {
-  margin-right: 10px;
 }
 .social-ft-link {
   background-color: var(--scry-sc-darck-tm-bg);
@@ -476,8 +477,11 @@ a:focus-visible {
 .cards-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
 }
-.cards-item:hover,
-.cards-item:focus {
+.cards-link {
+  display: block;
+}
+.cards-link:hover,
+.cards-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -496,6 +500,7 @@ a:focus-visible {
 }
 .cards-description {
   line-height: 1.9;
+  color: var(--primary-color);
 }
 /* ========================= /HERO ========================== */
 /* =================== / P O R T F O L I O ================== */
